# cathedral

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  IMPLEMENTATION.md  LICENSE  PLAN.md  README.md  cathedral-cli  pyproject.toml
.github/workflows/: publish.yml  python-package.yml
benchmarks/: inference_benchmarks.py
cathedral/: __init__.py  _rng.py  checks.py  distributions.py  main.py  model.py  plots.py  primitives.py  todo.hy  todos.json  trace.py  viz.py
cathedral/core/: eval.py  query.py
cathedral/inference/: __init__.py  enumeration.py  importance.py  mh.py  rejection.py
cathedral/primitives/: memoization.py  random.py
examples/: 01_generative_models.py  02_conditioning.py  03_patterns_of_inference.py  04_bayesian_data_analysis.py  05_mixture_models.py  06_social_cognition.py  07_grammars_and_recursion.py  coin_flip.py  linear_regression.py  sprinkler.cathedral  sprinkler.py
notebooks/: foo.ipynb
reference_material/: goodman_et_al_2008.md
reference_material/dependency_docs/: README.md  church_core_dependencies.md  constraint_propagation_dependencies.md  mcmc_dependencies.md  srfi_dependencies.md  standard_env_dependencies.md  utils_dependencies.md  xrp_dependencies.md
tests/: test_arviz.py  test_checks.py  test_diagnostics.py  test_distributions.py  test_eval.py  test_foo.py  test_inference.py  test_memoization.py  test_plots.py  test_primitives.py  test_query.py  test_stochastic_primitives.py  test_trace.py  test_viz.py
